--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,6 +1,6 @@
 .header {
     background-color: #F9F8F8;
-    padding: 10px 5%; /* Reduced vertical padding */
+    padding: 10px 5%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -11,14 +11,14 @@
 
 .logo img {
     height: auto;
-    max-height: 60px; /* limits size on large screens */
+    max-height: 60px; /* limite la taille sur les écrans large */
     width: auto;
     max-width: 100%;
     object-fit: contain;
     display: block;
     margin: 0;
     padding: 0;
-    transition: all 0.3s ease-in-out; /* needed for hover animations */
+    transition: all 0.3s ease-in-out; /* Effet pour l'animation hover */
 }
 
 .logo:hover img {
@@ -32,6 +32,7 @@
     gap: 30px;
     flex-wrap: wrap;
     justify-content: center;
+    transition: all 0.3s ease-in-out; /* Effet pour l'animation hover */
 }
 
 .nav-links a {
@@ -45,10 +46,11 @@
 }
 
 .nav-links a:hover {
-    color: #0077cc;
+    transform: skewX(-10deg) scale(1.05);
+    color: #3B252C;
 }
 
-/* Larger screens layout */
+/* Affichage lorsque écran > 768px */
 @media (min-width: 768px) {
     .header {
         flex-direction: row;
@@ -59,6 +61,6 @@
     }
 
     .logo img {
-        max-height: 70px; /* a bit bigger on desktop */
+        max-height: 70px; /* taille du logo max en full screen */
     }
 }
