--- a/src/css/details.css
+++ b/src/css/details.css
@@ -1,3 +1,7 @@
+h1.title-details{
+    margin: 30px 0;
+}
+
 .card-grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr); /* Default desktop */
@@ -70,6 +74,7 @@
         padding: 20px 8%;
     }
 }
+
 
 /*CARD AURA PART --------------------------------------------------------------------*/
 
